--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A frontend development scaffolding build",
   "main": "index.js",
   "scripts": {
-    "run": "npx webpack --config webpack.config.js"
+    "start": "npx webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,10 @@
   },
   "homepage": "https://github.com/thinkpyxl/frontendframe#readme",
   "devDependencies": {
+    "autoprefixer": "^9.7.4",
+    "css-loader": "^3.4.2",
+    "postcss-loader": "^3.0.0",
+    "style-loader": "^1.1.3",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
   }
