--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "autoprefixer": "^9.7.4",
     "css-loader": "^3.4.2",
+    "extract-text-webpack-plugin": "^3.0.2",
     "postcss-loader": "^3.0.0",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.0",
