--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "style-loader": "^1.1.3",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
+  },
+  "dependencies": {
+    "tailwindcss": "^1.2.0"
   }
 }
