--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/thinkpyxl/frontendframe#readme",
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^2.1.0",
     "autoprefixer": "^9.7.4",
     "css-loader": "^3.4.2",
     "mini-css-extract-plugin": "^0.9.0",
