--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "mini-css-extract-plugin": "^0.9.0",
     "postcss-loader": "^3.0.0",
     "style-loader": "^1.1.3",
+    "stylelint": "^13.2.1",
+    "stylelint-config-standard": "^20.0.0",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
   },
