--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "A frontend development scaffolding build",
   "main": "index.js",
   "scripts": {
-    "start": "npx webpack --config webpack.dev.js",
-    "watch": "npx webpack --config webpack.dev.js --watch --info-verbosity verbose"
+    "build": "npx webpack --config webpack.dev.js",
+    "build:styles": "npx tailwindcss build src/index.css -o dist/main.css",
+    "start": "npx webpack --config webpack.dev.js --watch --info-verbosity verbose",
+    "lint": "npx stylelint src/*.css"
   },
   "repository": {
     "type": "git",
@@ -29,8 +31,10 @@
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.1.0",
     "autoprefixer": "^9.7.4",
+    "clean-css": "^4.2.3",
     "css-loader": "^3.4.2",
     "mini-css-extract-plugin": "^0.9.0",
+    "npm-run-all": "^4.1.5",
     "postcss-loader": "^3.0.0",
     "style-loader": "^1.1.3",
     "stylelint": "^13.2.1",
