--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "A frontend development scaffolding build",
   "main": "index.js",
   "scripts": {
-    "build": "npx webpack --config webpack.dev.js",
-    "build:styles": "npx tailwindcss build src/index.css -o dist/main.css",
-    "start": "npx webpack --config webpack.dev.js --watch --info-verbosity verbose",
-    "lint": "npx stylelint src/*.css"
+    "build": "NODE_ENV=development webpack",
+    "start": "NODE_ENV=development webpack-dev-server --content-base=dist/ --inline --watch --hot --open",
+    "prod": "NODE_ENV=production webpack"
   },
   "repository": {
     "type": "git",
@@ -33,14 +32,17 @@
     "autoprefixer": "^9.7.4",
     "clean-css": "^4.2.3",
     "css-loader": "^3.4.2",
+    "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "npm-run-all": "^4.1.5",
     "postcss-loader": "^3.0.0",
     "style-loader": "^1.1.3",
     "stylelint": "^13.2.1",
     "stylelint-config-standard": "^20.0.0",
+    "twig-loader": "^0.5.1",
     "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
     "tailwindcss": "^1.2.0"
