--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,3 +1,20 @@
 {
-  "extends": "stylelint-config-standard"
+  "extends": "stylelint-config-recommended",
+  "rules": {
+    "at-rule-no-unknown": [
+      true,
+      {
+      "ignoreAtRules": [
+        "import-glob",
+        "tailwind",
+        "apply",
+        "variants",
+        "responsive",
+        "screen"
+        ]
+      }
+    ],
+    "declaration-block-trailing-semicolon": null,
+    "no-descending-specificity": null
+  }
 }
