--- a/package.json
+++ b/package.json
@@ -35,10 +35,13 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "npm-run-all": "^4.1.5",
+    "postcss-import": "^12.0.1",
+    "postcss-import-ext-glob": "^1.1.0",
     "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
     "style-loader": "^1.1.3",
     "stylelint": "^13.2.1",
-    "stylelint-config-standard": "^20.0.0",
+    "stylelint-config-recommended": "^3.0.0",
     "twig-loader": "^0.5.1",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
