--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "NODE_ENV=development webpack",
     "start": "NODE_ENV=development webpack-dev-server --content-base=dist/ --inline --watch --hot --open",
-    "prod": "NODE_ENV=production webpack"
+    "prod": "NODE_ENV=production webpack",
+    "plop": "plop"
   },
   "repository": {
     "type": "git",
@@ -35,6 +36,7 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "npm-run-all": "^4.1.5",
+    "plop": "^2.6.0",
     "postcss-import": "^12.0.1",
     "postcss-import-ext-glob": "^1.1.0",
     "postcss-loader": "^3.0.0",
