--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "NODE_ENV=development webpack",
-    "start": "NODE_ENV=development webpack-dev-server --content-base=dist/ --inline --watch --hot --open",
+    "start": "NODE_ENV=development webpack && webpack-dev-server --content-base=dist/ --inline --watch --hot --open",
     "prod": "NODE_ENV=production webpack",
     "plop": "plop"
   },
@@ -32,6 +32,7 @@
     "@fullhuman/postcss-purgecss": "^2.1.0",
     "autoprefixer": "^9.7.4",
     "clean-css": "^4.2.3",
+    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
@@ -44,6 +45,7 @@
     "style-loader": "^1.1.3",
     "stylelint": "^13.2.1",
     "stylelint-config-recommended": "^3.0.0",
+    "svg-sprite-html-webpack": "^2.3.0",
     "twig-loader": "^0.5.1",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
